cmake_minimum_required(VERSION 3.24)
project(CPP)

set(CMAKE_CXX_STANDARD 14)

include_directories("Command Line Restaurant Ordering System")
include_directories(Hackerrank)
include_directories("PT2 Project - Vaccination System")
include_directories(UrVaccine)
include_directories(UrVaccine/Completed)
include_directories(UrVaccineOLD/UrVaccine)

add_executable(CPP
        "Command Line Restaurant Ordering System/CustomerUI.cpp"
        "Command Line Restaurant Ordering System/MainMenu.cpp"
        "Command Line Restaurant Ordering System/ManagerUI.cpp"
        "Command Line Restaurant Ordering System/Payment.cpp"
        "Command Line Restaurant Ordering System/Utilities.cpp"
        "Command Line Restaurant Ordering System/Utilities.h"
        CppCrashCourse/CheatSheetC++/Cheat_Sheet_1.cpp
        CppCrashCourse/CheatSheetC++/Cheat_Sheet_2.cpp
        CppCrashCourse/CheatSheetC++/Cheat_Sheet_3.cpp
        CppCrashCourse/CheatSheetC++/Cheat_Sheet_4.cpp
        CppCrashCourse/CheatSheetC++/Cheat_Sheet_5.cpp
        CppCrashCourse/CheatSheetC++/Cheat_Sheet_6.cpp
        "CppCrashCourse/CheatSheetC++/Function Pointers and Lambdas.cpp"
        CppCrashCourse/CheatSheetC++/main.cpp
        CppCrashCourse/CheatSheetC++/Preprocessor_Directives.cpp
        CppCrashCourse/CheatSheetP1/CheatSheet1.cpp
        CppCrashCourse/CheatSheetP2/CheatSheet2.cpp
        CppCrashCourse/CheatSheetP3/CheatSheet3.cpp
        CppCrashCourse/CppCrashCourse/main.cpp
        CppCrashCourse/TesterProject/Source.cpp
        Hackerrank/_Class.h
        Hackerrank/Abstract_Classes_Polymorphism.h
        Hackerrank/Accessing_Inherited_Functions.h
        Hackerrank/Arrays_Introduction.h
        Hackerrank/Attending_Workshops.h
        Hackerrank/Attribute_Parser.h
        Hackerrank/Basic_Data_Types.h
        "Hackerrank/Bit Array.h"
        Hackerrank/BoxIt.h
        "Hackerrank/C++ Class Template Specialization.h"
        "Hackerrank/C++ Class Templates.h"
        "Hackerrank/C++ Variadics.h"
        Hackerrank/Classes_and_Objects.h
        Hackerrank/Conditional_Statements.h
        "Hackerrank/CPP Exception Handling.h"
        Hackerrank/Deque_STL.h
        "Hackerrank/Exceptional Server.h"
        Hackerrank/For_Loop.h
        Hackerrank/Functions.h
        "Hackerrank/Hotel Prices.h"
        Hackerrank/Inheritance_Introduction.h
        "Hackerrank/Inherited Code.h"
        Hackerrank/Input_And_Output.h
        "Hackerrank/Lower_Bound STL.h"
        Hackerrank/Magic_Spells.h
        Hackerrank/main.cpp
        Hackerrank/Maps_STL.h
        "Hackerrank/Messages Order.h"
        Hackerrank/Multi_Level_Inheritance.h
        Hackerrank/Operator_Overloading.h
        Hackerrank/Overload_Operators.h
        "Hackerrank/Overloading Ostream Operator.h"
        Hackerrank/Pointer.h
        Hackerrank/Print_Pretty.h
        Hackerrank/Rectangle_Area.h
        Hackerrank/Say_Hello_World.h
        Hackerrank/Sets_STL.h
        Hackerrank/Strings.h
        Hackerrank/StringStream.h
        Hackerrank/Struct.h
        Hackerrank/Variable_Sized_Arrays.h
        "Hackerrank/Vector Erase.h"
        Hackerrank/Vector_Sort.h
        Hackerrank/Virtual_Functions.h
        "LeetCode/01 Matrix.cpp"
        "LeetCode/3 Sum with Multiplicity.cpp"
        "LeetCode/3 Sum.cpp"
        "LeetCode/3Sum Closest.cpp"
        "LeetCode/4 Sum.cpp"
        LeetCode/4Sum_II.cpp
        "LeetCode/Add Digits.cpp"
        "LeetCode/Add One Row To Tree.cpp"
        "LeetCode/Add Strings.cpp"
        "LeetCode/Add Two Numbers II.cpp"
        "LeetCode/Add Two Numbers.cpp"
        "LeetCode/Advantage Shuffle.cpp"
        "LeetCode/All Elements in Two Binary Search Tree.cpp"
        "LeetCode/All Paths From Source To Target.cpp"
        "LeetCode/Ambiguous Coordinates.cpp"
        "LeetCode/Arithmetic Slices II Subsequence.cpp"
        "LeetCode/Arithmetic Slices.cpp"
        "LeetCode/Arranging Coins.cpp"
        "LeetCode/Array Nesting.cpp"
        "LeetCode/Array of Doubled Pairs.cpp"
        "LeetCode/Asteroid Collision.cpp"
        "LeetCode/Average of Levels in Binary Tree.cpp"
        "LeetCode/Backspace String Compare.cpp"
        LeetCode/Bag_Of_Tokens.cpp
        "LeetCode/Balanced Binary Tree.cpp"
        "LeetCode/Baseball Game.cpp"
        "LeetCode/Basic Calculator II.cpp"
        "LeetCode/Basic Calculator.cpp"
        "LeetCode/Beautiful Arrangement II.cpp"
        "LeetCode/Beautiful Arrangement.cpp"
        "LeetCode/Beautiful Array.cpp"
        "LeetCode/Best Time to Buy and Sell Stock II.cpp"
        "LeetCode/Best Time to Buy and Sell Stock III.cpp"
        "LeetCode/Best Time to Buy and Sell Stock with Cooldown.cpp"
        "LeetCode/Best Time To Buy and Sell Stock with Transaction Fee.cpp"
        "LeetCode/Best Time to Buy and Sell Stock.cpp"
        "LeetCode/Binary Search Tree Iterator.cpp"
        "LeetCode/Binary Search.cpp"
        "LeetCode/Binary Tree Cameras.cpp"
        "LeetCode/Binary Tree Level Order Traversal.cpp"
        "LeetCode/Binary Tree Pruning.cpp"
        "LeetCode/Binary Tree Right Side View.cpp"
        "LeetCode/Binary Tree Tilt.cpp"
        "LeetCode/Binary Trees with Factors.cpp"
        "LeetCode/Bitwise AND of Numbers Range.cpp"
        "LeetCode/Boats To Save People.cpp"
        "LeetCode/Break a Palindrome.cpp"
        "LeetCode/Brick Wall.cpp"
        "LeetCode/Broken Calculator.cpp"
        "LeetCode/Can Place Flowers.cpp"
        LeetCode/Candy.cpp
        "LeetCode/Car Pooling.cpp"
        "LeetCode/Champagne Tower.cpp"
        "LeetCode/Check Array Formation Through Concatenation.cpp"
        "LeetCode/Check if a String Contains all Binary Codes of Size K.cpp"
        "LeetCode/Check If All 1's Are at Least Length K Places Away.cpp"
        "LeetCode/Check if the Sentence Is Pangram.cpp"
        "LeetCode/Check if Two String Arrays are Equivalent.cpp"
        "LeetCode/Climbing Stairs.cpp"
        "LeetCode/Clone Graph.cpp"
        "LeetCode/Coin Change.cpp"
        "LeetCode/Combination Sum IV.cpp"
        "LeetCode/Combination Sum.cpp"
        "LeetCode/Compare Version Numbers.cpp"
        "LeetCode/Complement of Base 10 Integer.cpp"
        "LeetCode/Complex Number Multiplication.cpp"
        "LeetCode/Concatenation of Consecutive Binary Numbers.cpp"
        "LeetCode/Consecutive Characters.cpp"
        "LeetCode/Construct Binary Search Tree from Preorder Traversal.cpp"
        "LeetCode/Construct Binary Tree From Inorder and Postorder Traversal.cpp"
        "LeetCode/Construct Binary Tree from Preorder and Inorder Traversal.cpp"
        "LeetCode/Construct Original Digits From English.cpp"
        "LeetCode/Construct String From Binary Tree.cpp"
        "LeetCode/Construct Target Array With Multiple Sums.cpp"
        "LeetCode/Container With Most Water.cpp"
        "LeetCode/Contains Duplicate II.cpp"
        "LeetCode/Contiguous Array.cpp"
        "LeetCode/Continuous Subarray Sum.cpp"
        "LeetCode/Convert Binary Number in a Linked List To Integer.cpp"
        "LeetCode/Convert BST to Greater Tree.cpp"
        "LeetCode/Convert Sorted Array to Binary Search Tree.cpp"
        "LeetCode/Convert Sorted List to Binary Search Tree.cpp"
        "LeetCode/Copy List With Random Pointer.cpp"
        "LeetCode/Count All Valid Pickup And Delivery Options.cpp"
        "LeetCode/Count And Say.cpp"
        "LeetCode/Count Binary Substrings.cpp"
        "LeetCode/Count Complete Tree Nodes.cpp"
        "LeetCode/Count Good Nodes in Binary Tree.cpp"
        "LeetCode/Count of Smaller Numbers After Self.cpp"
        "LeetCode/Count Primes.cpp"
        "LeetCode/Count Sorted Vowel Strings.cpp"
        "LeetCode/Count Vowels Permutation.cpp"
        "LeetCode/Counting Bits.cpp"
        "LeetCode/Course Schedule II.cpp"
        "LeetCode/Course Schedule III.cpp"
        "LeetCode/Cousins in Binary Tree.cpp"
        "LeetCode/Create Sorted Array Through Instructions.cpp"
        "LeetCode/Critical Connections in a Network.cpp"
        "LeetCode/Custom Sort String.cpp"
        "LeetCode/Daily Temperatures.cpp"
        "LeetCode/Decode String.cpp"
        "LeetCode/Decode Ways II.cpp"
        "LeetCode/Decode Ways.cpp"
        LeetCode/Decoded_String_At_Index.cpp
        "LeetCode/Deepest Leaves Sum.cpp"
        "LeetCode/Delete and Earn.cpp"
        "LeetCode/Delete Node in a BST.cpp"
        "LeetCode/Delete Operation for Two Strings.cpp"
        "LeetCode/Delete the Middle Node of a Linked List.cpp"
        "LeetCode/Design Circular Queue.cpp"
        "LeetCode/Design HashMap.cpp"
        LeetCode/Design_Underground_System.cpp
        "LeetCode/Detect Capital.cpp"
        "LeetCode/Determine if String Halves are Alike.cpp"
        "LeetCode/Determine If Two Strings Are Close.cpp"
        "LeetCode/Diagonal Traverse.cpp"
        "LeetCode/Diameter of Binary Tree.cpp"
        LeetCode/Distinct_Subsequences.cpp
        "LeetCode/Distribute Candies.cpp"
        "LeetCode/Divide Two Integers.cpp"
        "LeetCode/Domino and Tromino Tiling.cpp"
        "LeetCode/Dungeon Game.cpp"
        "LeetCode/Encode and Decode TinyURL.cpp"
        "LeetCode/Erect The Fence.cpp"
        "LeetCode/Evaluate Reverse Polish Notation.cpp"
        "LeetCode/Excel Sheet Column Number.cpp"
        "LeetCode/Expression Add Operators.cpp"
        "LeetCode/Fibonacci Number.cpp"
        "LeetCode/Find a Corresponding Node of a Binary Tree in a Clone of that Tree.cpp"
        "LeetCode/Find All Anagrams In a String.cpp"
        "LeetCode/Find All Duplicates in an Array.cpp"
        "LeetCode/Find All Numbers Dissapeared in an Array.cpp"
        "LeetCode/Find and Replace Pattern.cpp"
        "LeetCode/Find Duplicate File in System.cpp"
        "LeetCode/Find First and Last Position of Element in Sorted Array.cpp"
        "LeetCode/Find K Closest Elements.cpp"
        "LeetCode/Find Median from Data Stream.cpp"
        "LeetCode/Find Minimum In Rotated Sorted Array.cpp"
        "LeetCode/Find Original Array From Doubled Array.cpp"
        "LeetCode/Find Peak Element.cpp"
        "LeetCode/Find Players With Zero Or One Losses.cpp"
        "LeetCode/Find the Difference.cpp"
        "LeetCode/Find The Most Competitive Subsequence.cpp"
        "LeetCode/Find The Smallest Integer Given A Threshold.cpp"
        "LeetCode/Find The Town Judge.cpp"
        "LeetCode/Find Winner on a Tic Tac Toe Game.cpp"
        "LeetCode/Flatten a Multilevel Doubly Linked List.cpp"
        "LeetCode/Flatten Nested List Iterator.cpp"
        LeetCode/Flatten_Binary_Tree_To_Linked_List.cpp
        "LeetCode/Flip Binary Tree to Match Preorder Traversal.cpp"
        "LeetCode/Flip String to Monotone Increasing'.cpp"
        "LeetCode/Flipping An Image.cpp"
        "LeetCode/Furthest Building You can Reach.cpp"
        "LeetCode/Game of Life.cpp"
        "LeetCode/Generate Random Point in a Circle.cpp"
        LeetCode/Generate_Parentheses.cpp
        "LeetCode/Get Maximum In Generated Array.cpp"
        "LeetCode/Global and Local Inversions.cpp"
        "LeetCode/Gray Code.cpp"
        "LeetCode/Group Anagrams.cpp"
        "LeetCode/Guess Number Higher or Lower.cpp"
        "LeetCode/Hamming Distance.cpp"
        "LeetCode/House Robber III.cpp"
        "LeetCode/House Robber.cpp"
        "LeetCode/Implement Trie (Prefix Tree).cpp"
        "LeetCode/Increasing Order Search Tree.cpp"
        "LeetCode/Increasing Triplet Subsequence.cpp"
        "LeetCode/Insert Delete GetRandom O(1).cpp"
        "LeetCode/Insert Into a Binary Search Tree.cpp"
        "LeetCode/Insertion Sort List.cpp"
        "LeetCode/Integer To Roman.cpp"
        "LeetCode/Interleaving String.cpp"
        "LeetCode/Intersection of Two Arrays II.cpp"
        "LeetCode/Intersection of Two Linked Lists.cpp"
        "LeetCode/Interval List Intersections.cpp"
        "LeetCode/Invert Binary Tree.cpp"
        "LeetCode/Is Graph Bipartite.cpp"
        "LeetCode/Is Subsequence.cpp"
        "LeetCode/Island Perimeter.cpp"
        "LeetCode/Isomorphic Strings.cpp"
        "LeetCode/Iterator For Combination.cpp"
        "LeetCode/Jump Game II.cpp"
        "LeetCode/Jump Game III.cpp"
        "LeetCode/Jump Game IV.cpp"
        "LeetCode/Jump Game VI.cpp"
        "LeetCode/Jump Game.cpp"
        "LeetCode/K Closest Points To Origin.cpp"
        "LeetCode/K-Diff Pairs in an Array.cpp"
        "LeetCode/Keys and Rooms.cpp"
        "LeetCode/Koko Eating Bananas.cpp"
        "LeetCode/Kth Largest Element in a Stream.cpp"
        "LeetCode/Kth Largest Element in an Array.cpp"
        "LeetCode/Kth Missing Positive Number.cpp"
        "LeetCode/Kth Smallest Element in a Sorted Matrix.cpp"
        "LeetCode/Kth Smallest Number In Multiplication Table.cpp"
        "LeetCode/Largest Divisible Subset.cpp"
        "LeetCode/Largest Plus Sign.cpp"
        "LeetCode/Largest Rectangle In Histogram.cpp"
        "LeetCode/Last Stone Weight.cpp"
        "LeetCode/Leaf-Similar Trees.cpp"
        "LeetCode/Letter Case Permutation.cpp"
        "LeetCode/Letter Combinations of a Phone Number.cpp"
        "LeetCode/Linked List Cycle II.cpp"
        "LeetCode/Linked List Cycle.cpp"
        "LeetCode/Linked List Random Node.cpp"
        "LeetCode/Longest Common Subsequence.cpp"
        "LeetCode/Longest Harmonious Subsequence.cpp"
        "LeetCode/Longest Increasing Path in A Matrix.cpp"
        "LeetCode/Longest Increasing Subsequence.cpp"
        "LeetCode/Longest Mountain In Array.cpp"
        "LeetCode/Longest Palindrome by Concatenating Two Letter Words.cpp"
        "LeetCode/Longest String Chain.cpp"
        "LeetCode/Longest Substring With At Least K Repeating Characters.cpp"
        "LeetCode/Longest Substring Without Repeating Characters.cpp"
        "LeetCode/Longest Turbulent Subarray.cpp"
        "LeetCode/Longest Uncommon Subsequence II.cpp"
        "LeetCode/Longest Valid Parentheses.cpp"
        "LeetCode/Longest Word in Dictionary Through Deleting.cpp"
        LeetCode/Longest_Consecutive_Sequence.cpp
        LeetCode/Longest_Palindrome_Substring.cpp
        "LeetCode/Lowest Common Ancestor of a Binary Search Tree.cpp"
        "LeetCode/Lowest Common Ancestor of a Binary Tree.cpp"
        "LeetCode/Majority Element.cpp"
        "LeetCode/Make The String Great.cpp"
        "LeetCode/Making A Large Island.cpp"
        "LeetCode/Map Sum Pairs.cpp"
        "LeetCode/Matchsticks to Square.cpp"
        "LeetCode/Max Area of Island.cpp"
        "LeetCode/Max Consecutive Ones III.cpp"
        "LeetCode/Max Consecutive Ones.cpp"
        "LeetCode/Max Number of K Sum Pairs.cpp"
        "LeetCode/Max Sum of Rectangle No Larger Than K.cpp"
        "LeetCode/Maximal Square.cpp"
        "LeetCode/Maximize Deviation in Array.cpp"
        "LeetCode/Maximize Distance to Closest Person.cpp"
        "LeetCode/Maximum 69 Number.cpp"
        "LeetCode/Maximum Area of a Piece of Cake After Horizontal and Vertical Cuts.cpp"
        "LeetCode/Maximum Depth of Binary Tree.cpp"
        "LeetCode/Maximum Difference Between Node and Ancestor.cpp"
        "LeetCode/Maximum Erasure Value.cpp"
        "LeetCode/Maximum Frequency Stack.cpp"
        "LeetCode/Maximum Gap.cpp"
        "LeetCode/Maximum Length of a Concatenated String With Unique Characters.cpp"
        "LeetCode/Maximum Length of Repeated Subarray.cpp"
        "LeetCode/Maximum Number of Balloons.cpp"
        "LeetCode/Maximum Performance of a Team.cpp"
        "LeetCode/Maximum Points You Can Obtain From Cards.cpp"
        "LeetCode/Maximum Product of Splitted Binary Tree.cpp"
        "LeetCode/Maximum Product of Word Lengths.cpp"
        "LeetCode/Maximum Product Subarray.cpp"
        "LeetCode/Maximum Profit in Job Scheduling.cpp"
        "LeetCode/Maximum Subarray.cpp"
        "LeetCode/Maximum Units on a Truck.cpp"
        "LeetCode/Maximum Width of Binary Tree.cpp"
        "LeetCode/Maximum XOR of Two Numbers In An Array.cpp"
        "LeetCode/Merge Intervals.cpp"
        "LeetCode/Merge K Sorted Lists.cpp"
        "LeetCode/Merge Sorted Array.cpp"
        "LeetCode/Merge Two Sorted Lists.cpp"
        "LeetCode/Middle of the Linked List.cpp"
        "LeetCode/Min Cost Climbing Stairs.cpp"
        "LeetCode/Min Cost To Connect All Points.cpp"
        "LeetCode/Minimum Absolute Difference.cpp"
        "LeetCode/Minimum Average Difference.cpp"
        "LeetCode/Minimum Costs to Move Chips to Same Position.cpp"
        "LeetCode/Minimum Deletions to Make Character Frequencies Unique.cpp"
        "LeetCode/Minimum Depth of Binary Tree.cpp"
        "LeetCode/Minimum Genetic Mutation.cpp"
        "LeetCode/Minimum Height Trees.cpp"
        "LeetCode/Minimum Moves to Equal Array Elements.cpp"
        "LeetCode/Minimum Number of Arrows to Burst Balloons.cpp"
        "LeetCode/Minimum Operations to Make Array Equal.cpp"
        "LeetCode/Minimum Operations To Reduce X to Zero.cpp"
        "LeetCode/Minimum Remove to Make Valid Parenthesis.cpp"
        "LeetCode/Minimum Time To Make Rope Colorful.cpp"
        "LeetCode/Minimum Value to Get Positive Step by Step Sum.cpp"
        "LeetCode/Minimum Window Substring.cpp"
        LeetCode/Minimum_Number_of_Refueling_Stops.cpp
        LeetCode/MinStack.cpp
        "LeetCode/Mirror Reflection.cpp"
        "LeetCode/Missing Number.cpp"
        "LeetCode/Multiply Strings.cpp"
        "LeetCode/My Calendar I.cpp"
        "LeetCode/N-ary Tree Level Order Traversal.cpp"
        "LeetCode/N-ary Tree Preorder Traversal.cpp"
        "LeetCode/N-Queens II.cpp"
        LeetCode/N-Queens.cpp
        "LeetCode/Nearest Exit From Entrance in Maze.cpp"
        "LeetCode/Next Greater Element I.cpp"
        "LeetCode/Next Greater Element III.cpp"
        "LeetCode/Next Permutation.cpp"
        "LeetCode/Non Decreasing Array.cpp"
        "LeetCode/Non Negative Integers Without Consecutive Ones.cpp"
        "LeetCode/Nth Tribonacci Number.cpp"
        "LeetCode/Number Complement.cpp"
        "LeetCode/Number of 1 Bits.cpp"
        "LeetCode/Number of Dice Rolls with Target Sum.cpp"
        "LeetCode/Number of Islands.cpp"
        "LeetCode/Number of Longest Increasing Subsequence.cpp"
        "LeetCode/Number of Matching Subsequences.cpp"
        "LeetCode/Number of Steps to Reduce A Number to Zero.cpp"
        "LeetCode/Number of Subarray with Bounded Maximum.cpp"
        "LeetCode/Number of Submatrices That Sum to Target.cpp"
        "LeetCode/Number of Valid Words for Each Puzzle.cpp"
        "LeetCode/Numbers At Most N Given Digit Set.cpp"
        "LeetCode/Odd Even Linked List.cpp"
        "LeetCode/Ones and Zeroes.cpp"
        "LeetCode/Open the Lock.cpp"
        "LeetCode/Orderly Queue.cpp"
        "LeetCode/Out of Boundary Paths.cpp"
        "LeetCode/Pacific Atlantic Water Flow.cpp"
        "LeetCode/Pairs of Songs With Total Durations Divisible by 60.cpp"
        "LeetCode/Palindrome Linked List.cpp"
        "LeetCode/Palindrome Pairs.cpp"
        "LeetCode/Palindrome Partitioning II.cpp"
        "LeetCode/Palindrome Partitioning.cpp"
        "LeetCode/Palindromic Substrings.cpp"
        "LeetCode/Partition Array into Disjoint Intervals.cpp"
        "LeetCode/Partition Equal Subset Sum.cpp"
        "LeetCode/Partition Labels.cpp"
        "LeetCode/Partition List.cpp"
        "LeetCode/Partition to K Equal Sum Subsets.cpp"
        "LeetCode/Partitioning Into Minimum Number Of Deci-Binary Numbers.cpp"
        "LeetCode/Pascal's Triangle.cpp"
        "LeetCode/Patching Array.cpp"
        "LeetCode/Path Sum II.cpp"
        "LeetCode/Path Sum III.cpp"
        "LeetCode/Path Sum.cpp"
        "LeetCode/Peeking Iterator.cpp"
        "LeetCode/Perfect Squares.cpp"
        "LeetCode/Permutation in String.cpp"
        LeetCode/Permutations_II.cpp
        "LeetCode/Populating Next Right Pointers In Each Node II.cpp"
        "LeetCode/Populating Next Right Pointers in Each Node.cpp"
        "LeetCode/Power of Three.cpp"
        "LeetCode/Power of Two.cpp"
        "LeetCode/Powerful Integers.cpp"
        "LeetCode/Prefix and Suffix Search.cpp"
        "LeetCode/Product of Array Except Self.cpp"
        "LeetCode/Pseudo-Palindromic Paths in a Binary Tree.cpp"
        "LeetCode/Push Dominoes.cpp"
        "LeetCode/Range Addition II.cpp"
        "LeetCode/Range Sum of BST.cpp"
        "LeetCode/Range Sum Query - Immutable.cpp"
        "LeetCode/Range Sum Query - Mutable.cpp"
        "LeetCode/Range Sum Query 2D - Immutable.cpp"
        "LeetCode/Rank Transform of a Matrix.cpp"
        "LeetCode/Reach a Number.cpp"
        "LeetCode/Reachable Nodes in Subdivded Graph.cpp"
        "LeetCode/Recover Binary Search Tree.cpp"
        "LeetCode/Rectangle Area II.cpp"
        "LeetCode/Rectangle Area.cpp"
        "LeetCode/Reduce Array Size to The Half.cpp"
        "LeetCode/Redundant Connection.cpp"
        "LeetCode/Remove all Adjacent Duplicates in String II.cpp"
        "LeetCode/Remove all Adjacent Duplicates in String.cpp"
        "LeetCode/Remove Boxes.cpp"
        "LeetCode/Remove Covered Intervals.cpp"
        "LeetCode/Remove Duplicates From Sorted Array II.cpp"
        "LeetCode/Remove Duplicates From Sorted List II.cpp"
        "LeetCode/Remove Linked List Elements.cpp"
        "LeetCode/Remove Nth Node From End of List.cpp"
        "LeetCode/Remove Palindromic Subsequence.cpp"
        "LeetCode/Reorder List.cpp"
        LeetCode/Reordered_Power_of_2.cpp
        "LeetCode/Reshape The Matrix.cpp"
        "LeetCode/Reverse Linked List II.cpp"
        "LeetCode/Reverse Linked List.cpp"
        "LeetCode/Reverse Nodes in K-Group.cpp"
        "LeetCode/Reverse Only Letters.cpp"
        "LeetCode/Reverse String.cpp"
        "LeetCode/Reverse Vowels of a String.cpp"
        "LeetCode/Reverse Words in a String III.cpp"
        "LeetCode/Reverse Words in a String.cpp"
        "LeetCode/Richest Customer Wealth.cpp"
        "LeetCode/Robot Bounded In Circle.cpp"
        "LeetCode/Roman to Integer.cpp"
        "LeetCode/Rotate Array.cpp"
        "LeetCode/Rotate Image.cpp"
        "LeetCode/Rotate List.cpp"
        "LeetCode/Rotting Oranges.cpp"
        "LeetCode/Running Sum of 1d Array.cpp"
        "LeetCode/Russian Doll Envelopes.cpp"
        "LeetCode/Satisfiability of Equality Equations.cpp"
        "LeetCode/Score of Parentheses.cpp"
        "LeetCode/Search 2D Matrix.cpp"
        "LeetCode/Search A 2D Matrix II.cpp"
        "LeetCode/Search in a Binary Search Tree.cpp"
        "LeetCode/Search in Rotated Sorted Array II.cpp"
        "LeetCode/Search Insert Position.cpp"
        "LeetCode/Search Suggestions System.cpp"
        "LeetCode/Sequential Digits.cpp"
        "LeetCode/Set Matrix Zeroes.cpp"
        "LeetCode/Set Mismatch.cpp"
        "LeetCode/Shift 2D Grid.cpp"
        "LeetCode/Shifting Letters.cpp"
        "LeetCode/Short Encoding of Words.cpp"
        "LeetCode/Shortest Distance To A Character.cpp"
        "LeetCode/Shortest Path in a Grid with Obstacles Elimination.cpp"
        "LeetCode/Shortest Path in Binary Matrix.cpp"
        "LeetCode/Shortest Unsorted Continuous Subarray.cpp"
        "LeetCode/Shuffle An Array.cpp"
        "LeetCode/Simplify Path.cpp"
        "LeetCode/Single Element in a Sorted Array.cpp"
        "LeetCode/Single Number III.cpp"
        "LeetCode/Single Number.cpp"
        "LeetCode/Sliding Window Maximum.cpp"
        "LeetCode/Slowest Key.cpp"
        "LeetCode/Smallest Integer Divisible By K.cpp"
        "LeetCode/Smallest Range II.cpp"
        "LeetCode/Smallest String with A Given Numeric Value.cpp"
        "LeetCode/Smallest String with Swaps.cpp"
        "LeetCode/Smallest Subtree with all the Deepest Nodes.cpp"
        "LeetCode/Sort Array By Parity II.cpp"
        "LeetCode/Sort Array By Parity.cpp"
        "LeetCode/Sort Characters By Frequency.cpp"
        "LeetCode/Sort Colors.cpp"
        "LeetCode/Sort The Matrix Diagonally.cpp"
        "LeetCode/Spiral Matrix II.cpp"
        "LeetCode/Spiral Matrix.cpp"
        "LeetCode/Split Array Into Consecutive Subsequences.cpp"
        "LeetCode/Split Linked List in Parts.cpp"
        "LeetCode/Squares of a Sorted Array.cpp"
        "LeetCode/Stamping The Sequence.cpp"
        "LeetCode/Stone Game IV.cpp"
        "LeetCode/Stone Game VII.cpp"
        "LeetCode/Stone Game.cpp"
        "LeetCode/String to Integer.cpp"
        "LeetCode/Subarray Sum Equals K.cpp"
        "LeetCode/Subsets II.cpp"
        LeetCode/Subsets.cpp
        "LeetCode/Sudoku Solver.cpp"
        "LeetCode/Sum of Distances in Tree.cpp"
        "LeetCode/Sum of Even Numbers After Queries.cpp"
        "LeetCode/Sum of Left Leaves.cpp"
        "LeetCode/Sum of Root To Leaf Binary Numbers.cpp"
        "LeetCode/Sum of Square Numbers.cpp"
        "LeetCode/Sum Root To Leaf Numbers.cpp"
        "LeetCode/Summary Ranges.cpp"
        "LeetCode/Super Palindrome.cpp"
        "LeetCode/Surrounded Regions.cpp"
        "LeetCode/Swap Nodes in Pairs.cpp"
        "LeetCode/Swapping Nodes in a Linked List.cpp"
        "LeetCode/Swim in Rising Water.cpp"
        "LeetCode/The K Weakest Rows in a Matrix.cpp"
        "LeetCode/The Kth Factor of N.cpp"
        "LeetCode/The Number of Weak Characters in the Game.cpp"
        "LeetCode/The Skyline Problem.cpp"
        "LeetCode/Three Equal Parts.cpp"
        "LeetCode/Time Based Key-Value Store.cpp"
        "LeetCode/To Lower Case.cpp"
        "LeetCode/Toeplitz Matrix.cpp"
        "LeetCode/Top K Frequent Words.cpp"
        "LeetCode/Transform to Chessboard.cpp"
        "LeetCode/Transpose Matrix.cpp"
        "LeetCode/Trapping Rain Water.cpp"
        LeetCode/Triangle.cpp
        "LeetCode/Trim a Binary Search Tree.cpp"
        "LeetCode/Two City Scheduling.cpp"
        "LeetCode/Two Sum II - Input Array Is Sorted.cpp"
        "LeetCode/Two Sum IV - Input is a BST.cpp"
        LeetCode/Two_Sum.cpp
        "LeetCode/Ugly Number.cpp"
        "LeetCode/Unique Binary Search Trees II.cpp"
        "LeetCode/Unique Binary Search Trees.cpp"
        "LeetCode/Unique Email Addresses.cpp"
        "LeetCode/Unique Morse Code Words.cpp"
        "LeetCode/Unique Number of Occurrences.cpp"
        "LeetCode/Unique Paths II.cpp"
        "LeetCode/Unique Paths III.cpp"
        "LeetCode/Unique Paths.cpp"
        "LeetCode/UTF-8 Validation.cpp"
        "LeetCode/Valid Anagram.cpp"
        "LeetCode/Valid Mountain Array.cpp"
        "LeetCode/Valid Number.cpp"
        "LeetCode/Valid Parenthesis.cpp"
        "LeetCode/Valid Square.cpp"
        "LeetCode/Valid Sudoku.cpp"
        "LeetCode/Valid Triangle Number.cpp"
        "LeetCode/Validate Binary Search Tree.cpp"
        "LeetCode/Validate Stack Sequences.cpp"
        "LeetCode/Verify Preorder Serialization of a Binary Tree.cpp"
        "LeetCode/Verifying an Alien Dictionary.cpp"
        "LeetCode/Vowel Spellchecker.cpp"
        "LeetCode/Where Will the Ball Fall.cpp"
        "LeetCode/Wiggle Subsequence.cpp"
        "LeetCode/Word Ladder II.cpp"
        "LeetCode/Word Ladder.cpp"
        "LeetCode/Word Pattern.cpp"
        "LeetCode/Word Search II.cpp"
        "LeetCode/Word Search.cpp"
        "LeetCode/Word Subsets.cpp"
        "PT2 Project - Vaccination System/database.cpp"
        "PT2 Project - Vaccination System/database.h"
        "PT2 Project - Vaccination System/main.cpp"
        "PT2 Project - Vaccination System/project.cpp"
        "PT2 Project - Vaccination System/project.h"
        "PT2 Project - Vaccination System/utilities.cpp"
        "PT2 Project - Vaccination System/utilities.h"
        UrVaccine/Completed/database.cpp
        UrVaccine/Completed/database.h
        UrVaccine/Completed/main.cpp
        UrVaccine/Completed/project.cpp
        UrVaccine/Completed/project.h
        UrVaccine/Completed/utilities.cpp
        UrVaccine/Completed/utilities.h
        UrVaccine/database.cpp
        UrVaccine/database.h
        UrVaccine/main.cpp
        UrVaccine/project.cpp
        UrVaccine/project.h
        UrVaccine/utilities.cpp
        UrVaccine/utilities.h
        UrVaccineOLD/UrVaccine/database.cpp
        UrVaccineOLD/UrVaccine/database.h
        UrVaccineOLD/UrVaccine/main.cpp
        UrVaccineOLD/UrVaccine/project.cpp
        UrVaccineOLD/UrVaccine/project.h
        UrVaccineOLD/UrVaccine/utilities.cpp
        UrVaccineOLD/UrVaccine/utilities.h
        UTM/main.cpp "LeetCode/Minimum Falling Path Sum.cpp" "LeetCode/Find if Path Exists in Graph.cpp" "LeetCode/Longest Subsequence With Limited Sum.cpp" "LeetCode/Maximum Bags With Full Capacity of Rocks.cpp" "LeetCode/Remove Stones to Minimize the Total.cpp" "LeetCode/Single-Threaded CPU.cpp" "LeetCode/Delete Columns to Make Sorted.cpp" "LeetCode/Maximum Ice Cream Bars.cpp" "LeetCode/Minimum Time to Collect All Apples in a Tree.cpp" "LeetCode/Number of Nodes in the Sub-Tree With the Same Label.cpp")
